--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                                 <div class="item" data-swiper-parallax="0">
                                     <div class="img_wrap">
                                         <div class="img_holder">
-                                            <div class="abs_img" data-swiper-parallax="500" style="background-image: url(assets/images/home/1.png);">
+                                            <div class="abs_img" data-swiper-parallax="500" style="background-image: url(images/home/1.png);">
                                             </div>
                                         </div>
                                     </div>
@@ -450,7 +450,7 @@
                                 <div class="item" data-swiper-parallax="0">
                                     <div class="img_wrap">
                                         <div class="img_holder">
-                                            <div class="abs_img" data-swiper-parallax="500" style="background-image: url(assets/images/home/3.png)">
+                                            <div class="abs_img" data-swiper-parallax="500" style="background-image: url(images/home/3.png)">
                                             </div>
                                         </div>
                                     </div>
